changed option select to text input, added error message and picture

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fetch Dog Breeds</title>
+  <title>Fetch Dog Breed</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -13,9 +13,7 @@
     <form>
       <fieldset>
         <legend>What breed of dog would you like to see?</legend>
-        <select id="breeds">
-
-        </select>
+        <input type="text" required id="breed" placeholder="dog breed">
         <input type="submit" value="Let's see that breed!">
       </fieldset>
     </form>
